--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -16,8 +16,9 @@
             android:id="@+id/iv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginStart="4dp"
             android:importantForAccessibility="no"
-            android:paddingHorizontal="4dp"
+            android:paddingHorizontal="8dp"
             android:src="@drawable/back_arrow" />
 
         <TextView
