--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,7 +49,7 @@
         android:layout_marginTop="8dp"
         android:autofillHints="emailAddress"
         android:enabled="false"
-        android:hint="IMC"
+        android:hint="@string/profile_screen_imc"
         android:importantForAutofill="no"
         android:inputType="number" />
 
