--- a/app/src/main/res/layout/fragment_routines.xml
+++ b/app/src/main/res/layout/fragment_routines.xml
@@ -19,6 +19,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
+        android:layout_margin="50dp"
         android:src="@drawable/add" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fb_eliminate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|bottom"
+        android:layout_margin="50dp"
+        android:src="@drawable/less" />
 </FrameLayout>
