--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@android:color/white"
+    android:orientation="vertical"
     tools:context=".ui.register.RegisterActivity">
 
     <include
@@ -19,7 +19,8 @@
         android:layout_marginTop="24dp"
         android:autofillHints="emailAddress"
         android:hint="@string/common_email"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:textColor="@color/edit_text_color" />
 
     <EditText
         android:id="@+id/et_password"
@@ -29,7 +30,8 @@
         android:layout_marginTop="8dp"
         android:autofillHints="password"
         android:hint="@string/common_password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="@color/edit_text_color" />
 
     <EditText
         android:id="@+id/et_repeat_password"
@@ -39,7 +41,8 @@
         android:layout_marginTop="8dp"
         android:autofillHints="password"
         android:hint="@string/register_screen_repeat_password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="@color/edit_text_color" />
 
     <EditText
         android:id="@+id/et_weight"
@@ -47,9 +50,10 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="8dp"
-        android:hint="@string/register_screen_weight"
+        android:hint="@string/common_weight"
         android:importantForAutofill="no"
-        android:inputType="numberDecimal" />
+        android:inputType="numberDecimal"
+        android:textColor="@color/edit_text_color" />
 
     <EditText
         android:id="@+id/et_height"
@@ -60,7 +64,8 @@
         android:autofillHints="emailAddress"
         android:hint="@string/register_screen_height"
         android:importantForAutofill="no"
-        android:inputType="number" />
+        android:inputType="number"
+        android:textColor="@color/edit_text_color" />
 
     <Button
         android:id="@+id/bt_register"
