--- a/app/src/main/res/layout/activity_routine_create.xml
+++ b/app/src/main/res/layout/activity_routine_create.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:background="@android:color/white"
-              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/in_toolbar"
@@ -26,8 +27,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="24dp"
-                android:hint="Nombre"
-                android:inputType="textCapWords" />
+                android:hint="@string/routine_create_screen_name"
+                android:inputType="textCapWords"
+                android:textColor="@color/edit_text_color" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,17 +42,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Ejercicios"
+                    android:text="@string/common_exercises"
                     android:textSize="18sp" />
 
                 <Button
                     android:id="@+id/bt_add_exercises"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Añadir"
+                    android:text="@string/routine_create_screen_add"
                     android:textSize="12sp" />
             </LinearLayout>
-            
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_exercises"
                 android:layout_width="match_parent"
@@ -65,7 +67,7 @@
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="16dp"
-                android:text="Guardar" />
+                android:text="@string/routine_create_screen_save" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
