--- a/app/src/main/res/layout/item_routine.xml
+++ b/app/src/main/res/layout/item_routine.xml
@@ -17,5 +17,12 @@
         android:textSize="16sp"
         tools:text="Exercise test" />
 
+    <CheckBox
+        android:id="@+id/cb_select_routine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical" />
+
+
 </LinearLayout>
 
