--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -57,6 +57,18 @@
         android:inputType="number"
         android:textColor="@color/edit_text_color" />
 
+    <TextView
+        android:id="@+id/tv_imc_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:padding="16dp"
+        android:text=""
+        android:textColor="@color/edit_text_color" />
+
     <Button
         android:id="@+id/bt_edit_save"
         android:layout_width="156dp"
